work with login component

--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -1,37 +1,84 @@
 <div class="login-wrapper">
-  <form class="login" (ngSubmit)="login()">
-    <section class="title">
-      <h3 class="welcome">Приветствуем Вас</h3>
-      на сайте о кино CINEMA
-      <h5 class="hint">Для работы с системой необходимо авторизоваться</h5>
-    </section>
-    <div class="login-group">
-
-      <input 
-        class="username" 
-        type="text" 
-        id="login_username" 
-        placeholder="Логин" 
-        name="name"
-        [(ngModel)]="credentials.username"
-      >
-
-      <input 
-        class="password" 
-        type="password" 
-        id="login_password" 
-        placeholder="Пароль" 
-        name="password"
-        [(ngModel)]="credentials.password"
-      >
-
-      <div class="error active" *ngIf="errorMessage">
-        {{ errorMessage }}
-      </div>
-
-      <button type="submit" class="btn btn-primary">Войти</button>
-      <!-- <button class="btn btn-info" (click)="goToRegistration()">Регистрация</button> -->
+  <div class="background">
+    <div *ngFor="let film of films">
+      <img src="{{imgUrl + film.poster_path}}" alt="">
     </div>
-  </form>
+  </div>
+  <div class="background-back">
+    <div *ngFor="let film of films">
+      <img src="{{imgUrl + film.poster_path}}" alt="">
+    </div>
+  </div>
+
+
+   <mat-card class="auth-form">
+   <!-- <form (ngSubmit)="login()"> -->
+
+
+
+      <section class="title">
+        <div class="logo">
+          <img src="assets/logo.jpg" alt="">
+        </div>
+        <h3 class="welcome">Приветствуем Вас на сайте о кино</h3>        
+        <h5 class="hint">Для работы с сайтом необходимо авторизоваться</h5>
+      </section>
+
+
+
+
+      <form>
+        <div class="form-section">
+
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Адрес электронной почты" [formControl]="emailFormControl">
+            <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+              Please enter a valid email address
+            </mat-error>
+            <mat-error *ngIf="emailFormControl.hasError('required')">
+              Email is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Пароль" [formControl]="passwordFormControl">   
+            <mat-error *ngIf="passwordFormControl.hasError('required')">
+              Password is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+
+        </div>
+
+
+        <button mat-raised-button color="accent">Войти</button>
+      </form>
+      
+
+      <!-- <div class="login-group">
+
+        <input class="username" type="text" id="login_username" placeholder="Логин" name="name"
+          [(ngModel)]="credentials.username">
+
+        <input class="password" type="password" id="login_password" placeholder="Пароль" name="password"
+          [(ngModel)]="credentials.password">
+
+        <div class="error active" *ngIf="errorMessage">
+          {{ errorMessage }}
+        </div>
+
+
+
+
+        <button type="submit" class="btn btn-primary">Войти</button>
+        <button class="btn btn-info" (click)="goToRegistration()">Регистрация</button>
+      </div> -->
+
+
+
+
+    <!-- </form> -->
+  </mat-card>
+
 </div>
+
 
