--- a/practice/src/app/auth/login/login.component.scss
+++ b/practice/src/app/auth/login/login.component.scss
@@ -1,3 +1,77 @@
 .login-wrapper .login .login-group .btn {
-  margin-top: 2rem;
+  
 }
+
+.login-wrapper {
+    height: 100%;
+    display: flex;
+
+    .background {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        display: flex;
+        transform: rotate(10deg) scale(1.1, 1.1) translate(2%, 15%);
+        
+        div {
+            width: auto;
+            height: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+    } 
+
+    .background-back {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        position: absolute;
+        top: 0;
+        z-index: -1;
+        filter: blur(5px);
+        div {
+            width: auto;
+            height: 100%;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        } 
+    }
+
+    .auth-form {
+        width: 350px;
+        margin: auto;
+        z-index: 100;
+        background: white;
+        padding: 25px;
+        text-align: center;    
+
+        .logo {
+            width: 100px;
+            height: 100px;
+            display: inline-block;
+            img {
+                width: 100%;
+            }
+        }
+
+
+        .form-section {
+            display: flex;
+            flex-direction: column;
+        }
+
+        button {
+            margin-top: 20px;
+            background-color: #009aff;
+        }
+    }
+
+
+}
+
