--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -5,8 +5,8 @@
     </div>
   </div>
   <div class="background-back">
-    <div *ngFor="let film of films">
-      <img src="{{imgUrl + film.poster_path}}" alt="">
+    <div *ngFor="let background of backgrounds">
+      <img src="{{imgUrl + background.poster_path}}" alt="">
     </div>
   </div>
 
