--- a/practice/src/app/auth/login/login.component.scss
+++ b/practice/src/app/auth/login/login.component.scss
@@ -47,7 +47,7 @@
         width: 350px;
         margin: auto;
         z-index: 100;
-        background: white;
+        background: #fdfffa;
         padding: 25px;
         text-align: center;    
 
