--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -12,7 +12,7 @@
 
 
    <mat-card class="auth-form">
-   <!-- <form (ngSubmit)="login()"> -->
+  
 
 
 
@@ -27,11 +27,16 @@
 
 
 
-      <form>
+      <form (ngSubmit)="login()">
         <div class="form-section">
 
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Адрес электронной почты" [formControl]="emailFormControl">
+            <input 
+              matInput 
+              placeholder="Адрес электронной почты" 
+              [formControl]="emailFormControl"
+              [(ngModel)]="credentials.username"
+            >
             <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
               Please enter a valid email address
             </mat-error>
@@ -41,7 +46,12 @@
           </mat-form-field>
 
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Пароль" [formControl]="passwordFormControl">   
+            <input 
+              matInput 
+              placeholder="Пароль"    
+              [formControl]="passwordFormControl"
+              [(ngModel)]="credentials.password"
+            >   
             <mat-error *ngIf="passwordFormControl.hasError('required')">
               Password is <strong>required</strong>
             </mat-error>
@@ -54,9 +64,9 @@
       </form>
       
 
-      <!-- <div class="login-group">
+     
 
-        <input class="username" type="text" id="login_username" placeholder="Логин" name="name"
+        <!-- <input class="username" type="text" id="login_username" placeholder="Логин" name="name"
           [(ngModel)]="credentials.username">
 
         <input class="password" type="password" id="login_password" placeholder="Пароль" name="password"
@@ -64,19 +74,19 @@
 
         <div class="error active" *ngIf="errorMessage">
           {{ errorMessage }}
-        </div>
+        </div> -->
 
 
 
 
-        <button type="submit" class="btn btn-primary">Войти</button>
-        <button class="btn btn-info" (click)="goToRegistration()">Регистрация</button>
-      </div> -->
+        
+        <!-- <button class="btn btn-info" (click)="goToRegistration()">Регистрация</button> -->
+    
 
 
 
 
-    <!-- </form> -->
+  
   </mat-card>
 
 </div>
