setting auth service

--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar *ngIf="false">
+<mat-toolbar *ngIf="isLogin">
   <mat-toolbar-row fxLayout="row wrap" fxLayoutAlign="space-between center">
     <div class="logo-wrapp" routerLink="/main">
       <img src="assets/logo.jpg" alt="">
