--- a/practice/src/app/app.component.html
+++ b/practice/src/app/app.component.html
@@ -15,6 +15,8 @@
       </div>
 
        <app-search></app-search>
+
+       <button mat-raised-button class="loguot" (click)="logout()" >Выйти</button>
     </div>
    
   </mat-toolbar-row>
