change ctracture main and lists pages

--- a/practice/src/app/app.component.scss
+++ b/practice/src/app/app.component.scss
@@ -2,6 +2,10 @@ app-search {
   margin-left: 35px;
 }
 
+.header {
+  position: absolute;
+}
+
 .nav-section {
   padding-right: 15px;
   border-right: 1px solid white;
