--- a/practice/src/app/films-catalog/main/main.component.scss
+++ b/practice/src/app/films-catalog/main/main.component.scss
@@ -18,14 +18,17 @@ button {
 }
 
 .cards-section {
-  max-width: 100%;
-  margin: 0 auto;
-  overflow-y: overlay;
-  height: 93vh;
-  overflow-x: hidden;
   padding: 2.5%;
   padding-top: 5%;
+  display: flex;
   > div {
+    margin: auto;
+    > div {
       margin-bottom: 40px;
+    }
+    > div:last-child {
+      margin-bottom: 0;
+    }
   }
+
 }
