add style to auth form

--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -59,11 +59,11 @@
           [(ngModel)]="credentials.username">
 
         <input class="password" type="password" id="login_password" placeholder="Пароль" name="password"
-          [(ngModel)]="credentials.password">
+          [(ngModel)]="credentials.password"> -->
 
         <div class="error active" *ngIf="errorMessage">
           {{ errorMessage }}
-        </div> -->
+        </div>
 
        
 
