--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -1,3 +1,37 @@
-<p>
-  details works!
-</p>
+<div *ngIf="!spiner" class="cards-section">
+  <div>
+    <div>
+
+      <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+        <h2>Популярные фильмы</h2>
+       
+      </div>
+      <!-- <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+        <mat-card class="mb-2em" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let film of films">
+          <div>
+            <img src="{{imgUrl + film.poster_path}}" alt="">
+          </div>
+        </mat-card>
+      </div> -->
+    <!-- </div> -->
+<!-- 
+    <div>
+      <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+        <h2>Популярные актеры</h2>
+        <button mat-raised-button routerLink="/actors-list">Посмотреть всех актеров</button>
+      </div>
+      <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+        <mat-card class="mb-2em" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let actor of actors">
+          <div>
+            <img src="{{imgUrl + actor.profile_path}}" alt="">
+          </div>
+        </mat-card>
+      </div> -->
+    </div>
+
+  </div>
+
+</div>
+
+<app-spiner *ngIf="spiner"></app-spiner>
+>
