work with details page

--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -3,7 +3,7 @@
     <div>
 
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-        <h2>Популярные фильмы</h2>
+        <h2>Фильм</h2>
        
       </div>
       <!-- <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
@@ -27,6 +27,14 @@
           </div>
         </mat-card>
       </div> -->
+
+      <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
+        <h2>Актер</h2>
+
+      </div>
+
+
+
     </div>
 
   </div>
