--- a/practice/src/app/films-catalog/main/main.component.html
+++ b/practice/src/app/films-catalog/main/main.component.html
@@ -4,7 +4,7 @@
       
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
         <h2>Популярные фильмы</h2>
-        <button mat-raised-button routerLink="/films-list">Посмотреть все фильмы</button>
+        <button mat-raised-button routerLink="/films">Посмотреть все фильмы</button>
       </div>
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
         <mat-card
@@ -23,7 +23,7 @@
     <div>
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
         <h2>Популярные актеры</h2>
-        <button mat-raised-button routerLink="/actors-list">Посмотреть всех актеров</button>
+        <button mat-raised-button routerLink="/actors">Посмотреть всех актеров</button>
       </div>
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
         <mat-card class="mb-2em" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let actor of actors">
