--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -3,10 +3,15 @@
     <div>
 
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
-        <h2 *ngIf="filmDetails">Фильм</h2>
-        <h2 *ngIf="!filmDetails">Актер</h2>
-       
+
+        
+        <div *ngIf="filmDetails">Фильм</div> 
+        
+        
+        <h2 *ngIf="actorDetails">Актер</h2>       
       </div>
+      
+
       <!-- <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
         <mat-card class="mb-2em" fxFlex="15%" fxFlex.lt-md="45%" fxFlex.lt-sm="100%" *ngFor="let film of films">
           <div>
@@ -28,10 +33,8 @@
           </div>
         </mat-card>
       </div> -->
-
-
-
     <!-- </div> -->
+
 
   </div>
 
