--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -5,10 +5,9 @@
       <div fxLayout="row wrap" fxLayoutAlign="space-between" fxLayoutAlign.lt-sm="center">
 
         
-        <div *ngIf="filmDetails">Фильм</div> 
+        <h2 *ngIf="showDetails">Фильм</h2>        
         
-        
-        <h2 *ngIf="actorDetails">Актер</h2>       
+        <h2 *ngIf="!showDetails">Актер</h2>
       </div>
       
 
