--- a/practice/src/app/shared/components/film-item/film-item.component.html
+++ b/practice/src/app/shared/components/film-item/film-item.component.html
@@ -24,7 +24,7 @@
             <i class="material-icons">bookmark</i>
           </button>
         </ng-template>
-        <a mat-icon-button routerLink="details">
+        <a mat-icon-button routerLink="details" (click)="clickEventHandler()" >
           <i class="material-icons">menu</i>          
         </a>
         <button 
