--- a/practice/src/app/shared/components/film-details/film-details.component.scss
+++ b/practice/src/app/shared/components/film-details/film-details.component.scss
@@ -69,7 +69,8 @@
             display: flex;   
             margin-bottom: 20px;
             justify-content: center;
-            span {               
+            span {    
+                margin: auto;           
                 height: 75px;
                 width: 125px;
                 img {
