--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -5,7 +5,7 @@
       <img src="{{imgUrl + film.poster_path}}" alt="">
     </div>
   </div>
-  
+
   <div class="background-back">
     <div *ngFor="let background of backgrounds">
       <img src="{{imgUrl + background.poster_path}}" alt="">
@@ -39,6 +39,10 @@
 
     <div class="error active" *ngIf="errorMessage">
       {{ errorMessage }}
+    </div>
+
+    <div class="error active" *ngIf="successMessage">
+      {{ successMessage }}
     </div>
 
   </mat-card>
