add snackbar with message to login component

--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -37,13 +37,13 @@
       <button mat-raised-button color="accent">Войти</button>
     </form>
 
-    <div class="error active" *ngIf="errorMessage">
+    <!-- <div class="error active" *ngIf="errorMessage">
       {{ errorMessage }}
     </div>
 
     <div class="error active" *ngIf="successMessage">
       {{ successMessage }}
-    </div>
+    </div> -->
 
   </mat-card>
 
