work with snackbar

--- a/practice/src/styles.scss
+++ b/practice/src/styles.scss
@@ -89,3 +89,17 @@ router-outlet~* {
 }
 
 
+.mat-snack-bar-container {
+  color:#fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  background: #323232;
+}
+
+.mat-simple-snackbar { 
+  justify-content: center !important;
+}
+
+
+
+
