add actor-details component to details

--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -8,7 +8,7 @@
         
       
         <ng-container *ngIf="!showDetails">
-          <app-actor-details [data]="film"></app-actor-details>
+          <app-actor-details [data]="actor"></app-actor-details>
         </ng-container>
 
       </div> 
