work with details actor

--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -8,7 +8,8 @@
         
       
         <ng-container *ngIf="!showDetails">
-          <app-actor-details [data]="actor"></app-actor-details>
+          <app-actor-details ></app-actor-details>
+          <!-- [data]="actor" -->
         </ng-container>
 
       </div> 
