--- a/practice/src/app/shared/components/actor-details/actor-details.component.html
+++ b/practice/src/app/shared/components/actor-details/actor-details.component.html
@@ -1,3 +1,28 @@
-<p>
-  actor-details works!
-</p>
+  <div class='cards'>
+    <div>
+      <img src="{{imgUrl + film.poster_path}}" alt="">
+    </div>
+    <div class='info'>
+      <h2>{{film.title}}</h2>
+      <p class='year'>{{film.release_date}}</p>
+      <p class="genre">Жанр:
+        <span *ngFor="let genre of film.genres">
+          <span>{{genre.name}} / </span>
+        </span>
+      </p>
+      <p class="description">
+        {{ (film.overview.length > 700) ? (film.overview | slice:0:700) + '...' : (film.overview) }}</p>
+
+      <a class="homepage" [href]="film.homepage" target="_blank">{{film.homepage}}</a>
+      <p class="budget">Бюджет фильма: {{film.budget}}$ </p>
+
+      <div class="production_companies">
+        <span *ngFor="let production_companie of film.production_companies">
+          <img src="{{smallImgPath + production_companie.logo_path}}" alt="">
+        </span>
+      </div>
+      <div class="backdrop">
+        <img src="{{midBackPath + film.backdrop_path}}" alt="">
+      </div>
+    </div>
+  </div>
