work with details actor

--- a/practice/src/app/films-catalog/details/details.component.html
+++ b/practice/src/app/films-catalog/details/details.component.html
@@ -8,10 +8,8 @@
         
       
         <ng-container *ngIf="!showDetails">
-          <app-actor-details ></app-actor-details>
-          <!-- [data]="actor" -->
+          <app-actor-details [data]="actor"></app-actor-details>          
         </ng-container>
-
       </div> 
   </div>
 </div>
