--- a/practice/src/app/shared/components/actor-item/actor-item.component.html
+++ b/practice/src/app/shared/components/actor-item/actor-item.component.html
@@ -1,4 +1,4 @@
-<div class='card' routerLink="details">
+<div class='card' (click)="getDetails()">
   <div class="name">
     <h2>{{actor.name}}</h2>
   </div>        
