work with details actor

--- a/practice/src/app/shared/components/actor-details/actor-details.component.html
+++ b/practice/src/app/shared/components/actor-details/actor-details.component.html
@@ -1,9 +1,9 @@
   <div class='cards'>
     <div>
-      <img src="{{imgUrl + film.poster_path}}" alt="">
+      <img src="{{imgUrl + actor.profile_path}}" alt="">
     </div>
     <div class='info'>
-      <h2>{{film.title}}</h2>
+      <!-- <h2>{{film.title}}</h2>
       <p class='year'>{{film.release_date}}</p>
       <p class="genre">Жанр:
         <span *ngFor="let genre of film.genres">
@@ -23,6 +23,6 @@
       </div>
       <div class="backdrop">
         <img src="{{midBackPath + film.backdrop_path}}" alt="">
-      </div>
+      </div> -->
     </div>
   </div>
