--- a/practice/src/app/films-catalog/actors-list/actors-list.component.scss
+++ b/practice/src/app/films-catalog/actors-list/actors-list.component.scss
@@ -9,7 +9,19 @@
   padding: 0 32px;
   margin: 30px auto;
   max-width: 1100px;
+  div {
+    display: flex;
+    align-items: center;
+    p {
+      padding-top: 5px;
+    }
+    button {
+      margin-left: 20px;
+    }
+  }
 }
+
+
 
 
 
