work with api path

--- a/practice/src/app/auth/login/login.component.html
+++ b/practice/src/app/auth/login/login.component.html
@@ -24,8 +24,8 @@
       <div class="form-section">
 
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Адрес электронной почты" formControlName="email">
-          <mat-error *ngIf="f.email.invalid">{{getEmailErrorMessage()}}</mat-error>
+          <input matInput placeholder="Имя" formControlName="name">
+          <mat-error *ngIf="f.name.invalid">{{getNameErrorMessage()}}</mat-error>
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
